samples/_failures_safe/1761730072_03b3b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f882303.c: In function ‘main’:
./samples/SAFE/__tmp_7f882303.c:163:67: error: expected ‘)’ at end of input
  163 |     printf("\nDecompressed data (%zu bytes):\n", decompressed.size
      |           ~                                                       ^
      |                                                                   )
./samples/SAFE/__tmp_7f882303.c:163:5: error: expected declaration or statement at end of input
  163 |     printf("\nDecompressed data (%zu bytes):\n", decompressed.size
      |     ^~~~~~
